# benchmark_llm_edge

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
PoETaV2/: .gitignore  README.md  conversation.py  description.json  description_conversation.json  main.py  setup.py  tokenization.py
PoETaV2/configs/: hf_model_template.json  poeta_v2_full.json
PoETaV2/lm_eval/: base.py  evaluator.py  metrics.py  utils.py
PoETaV2/scripts/: bulk_evaluation.py  calculate_npm.py  calculate_npm_from_wandb.py
benchmark/: .env.amd  .env.cpu  .env.cuda  README.md  benchmark.py  benchmark_elib.py  pyproject.toml
benchmark/analise/: questions.md
benchmark/docs/: extracao_metricas_bench_custom.md  guia_benchmark_multi_hardware.md  plano_benchmark_elib_llamacpp.md
benchmark/output/: ab_after_stop_tokens.json  ab_before_stop_tokens.json  saida_benchmark.json  saida_benchmark_enem_cuda_robust_fixed.json  saida_benchmark_llamabench_test.json  saida_benchmark_poetav2.json  saida_benchmark_poetav2_cuda_Q8.json  saida_benchmark_poetav2_deepseek_bf16.json  saida_benchmark_poetav2_exemplo_cpu.json  saida_benchmark_poetav2_falha_qwen_q8.json  saida_benchmark_poetav2_qwen.json  (+16 more)
benchmark_arm/: .env.arm  sys
docker-compose/: Dockerfile.engine
logs/: convert_gguf.txt  execute_fp16_deepseek.txt  execute_fp16_llama.txt  execute_fp16_ministral.txt  execute_fp16_qwen.txt  execute_fp16_sabia.txt
quantization/: Makefile  quantize.py
utils/: convert_json_to_jsonl.py  convert_json_to_parquet.py  convert_jsonl_to_parquet.py  test_parquet.py
(+2210 files in other folders)
