[project]
name = "tcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gguf>=0.18.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "protobuf>=7.34.0",
    "psutil>=7.2.2",
    "pyarrow>=23.0.1",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
